Invalid code is generated for storing constants with baseindex addressing modes on ARM traditional. https://bugs.webkit.org/show_bug.cgi?id=109050

Reviewed by Oliver Hunt.

The S! scratch register is reused, but it should contain the constant value.

* assembler/ARMAssembler.cpp:
(JSC::ARMAssembler::baseIndexTransfer32):
(JSC::ARMAssembler::baseIndexTransfer16):


Canonical link: https://commits.webkit.org/127391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142146 268f45cc-cd09-0410-ab3c-d52691b4dbfc